feat: Docker容器通信的最简单方式:桥接网络

--- a/docker-compose-test/docker-compose.yml
+++ b/docker-compose-test/docker-compose.yml
@@ -8,15 +8,34 @@ services:
       - redis-container
     ports:
       - '3000:3000'
+    networks:
+      - common-network
   mysql-container:
     image: mysql:5.7
+    restart: always
     ports:
       - '3306:3306'
+    environment:
+      MYSQL_ROOT_PASSWORD: 123456
+      TZ: Asia/Shanghai
     volumes:
       - C:/Users/guiyu/code/mysql-data:/var/lib/mysql
+    command: 
+      --max_connections=1000
+      --character-set-server=utf8mb4
+      --collation-server=utf8mb4_general_ci
+      --default-authentication-plugin=mysql_native_password
+    networks:
+      - common-network
   redis-container:
-    image: redis
+    image: redis:latest
+    restart: always
     ports:
       - '6379:6379'
     volumes:
       - C:/Users/guiyu/code/redis-data:/data
+    networks:
+      - common-network
+networks:
+  common-network:
+    driver: bridge
