--- a/meeting_room_booking_system_frontend_admin/package.json
+++ b/meeting_room_booking_system_frontend_admin/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.15.3",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
+    "echarts": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
